create resource class

--- a/lib/sakurraform/templates/network.tt
+++ b/lib/sakurraform/templates/network.tt
@@ -1,4 +1,7 @@
 ---
-- name: defaultrouter
-  networkmasklen: 28
+network:
+  - name: defaultrouter
+    networkmasklen: 28
+  - name: defaultrouter2
+    networkmasklen: 28
 
