create server with switch(wip)

--- a/lib/sakurraform/templates/server.tt
+++ b/lib/sakurraform/templates/server.tt
@@ -2,26 +2,26 @@
 server:
   - name: server1
     serverplan: 2001
-    boot: true
     sshkey: <% ENV['SAKURA_SSH_KEYID'] %>
     volume:
       diskplan: 4
       sourcearchive: 112500463685
     switch: network[defaultrouter]
     meta:
+      network_id: 1
       chef_environment: null
       chef_role:
         - aaa
         - bbb
   - name: server2
     serverplan: 2001
-    boot: true
     sshkey: <% ENV['SAKURA_SSH_KEYID'] %>
     volume:
       diskplan: 4
       sourcearchive: 112500463685
     switch: network[defaultrouter]
     meta:
+      network_id: 2
       chef_environment: null
       chef_role:
         - aaa
