bug: creates duplicate resource...

--- a/lib/sakurraform/templates/server.tt
+++ b/lib/sakurraform/templates/server.tt
@@ -2,7 +2,7 @@
 server:
   - name: server1
     serverplan: 2001
-    sshkey: <% ENV['SAKURA_SSH_KEYID'] %>
+    sshkey: <%= ENV['SAKURA_SSH_KEYID'] %>
     volume:
       diskplan: 4
       sourcearchive: 112500463685
@@ -15,7 +15,7 @@ server:
         - bbb
   - name: server2
     serverplan: 2001
-    sshkey: <% ENV['SAKURA_SSH_KEYID'] %>
+    sshkey: <%= ENV['SAKURA_SSH_KEYID'] %>
     volume:
       diskplan: 4
       sourcearchive: 112500463685
