--- a/lib/sakurraform/templates/credentials.tt
+++ b/lib/sakurraform/templates/credentials.tt
@@ -1,3 +1,5 @@
 default:
   sakuracloud_api_token: <%= @sakuracloud_api_token %>
   sakuracloud_api_token_secret: <%= @sakuracloud_api_token_secret %>
+  sakura_base_storage_bucket: <%= @sakura_base_storage_bucket ? @sakura_base_storage_bucket : "null" %>
+  sakura_base_storage_token: <%= @sakura_base_storage_token ? @sakura_base_storage_token : "null" %>
