--- a/lib/sakurraform/templates/server.tt
+++ b/lib/sakurraform/templates/server.tt
@@ -7,6 +7,8 @@ server:
       diskplan: 4
       sourcearchive: 112500463685
     switch: network[defaultrouter]
+    interfaces:
+      - network[localswitch1]
     meta:
       network_offset: 3
       chef_environment: null
@@ -20,6 +22,8 @@ server:
       diskplan: 4
       sourcearchive: 112500463685
     switch: network[defaultrouter]
+    interfaces:
+      - network[localswitch1]
     meta:
       network_offset: 4
       chef_environment: null
