follow fog-sakuracloud 1.7

--- a/lib/sakurraform/templates/credentials.tt
+++ b/lib/sakurraform/templates/credentials.tt
@@ -3,3 +3,4 @@ default:
   sakuracloud_api_token_secret: <%= @sakuracloud_api_token_secret %>
   sakura_object_storage_bucket: <%= @sakura_object_storage_bucket ? @sakura_object_storage_bucket : "null" %>
   sakura_object_storage_token: <%= @sakura_object_storage_token ? @sakura_object_storage_token : "null" %>
+  sakuracloud_api_zone: <%= @api_region %>
